--- a/AboutUs/about.html
+++ b/AboutUs/about.html
@@ -6,6 +6,8 @@
     <title>About Us - Heart-Mind Consultancy</title>
     <link rel="stylesheet" href="about.css" />
     <link rel="stylesheet" href="../styles.css" />
+    <link rel="icon" href="../Image/Logo Ico.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../Image/Logo Ico.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Loader -->
