--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -6,6 +6,8 @@
     <title>Gallery - HeartMind Consultancy</title>
     <link rel="stylesheet" href="gallery.css" />
     <link rel="stylesheet" href="../styles.css" />
+    <link rel="icon" href="../Image/Logo Ico.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../Image/Logo Ico.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Loader -->
