--- a/index.html
+++ b/index.html
@@ -349,6 +349,9 @@
       function () {
         (window.vaq = window.vaq || []).push(arguments);
       };
+
+      window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
   </script>
+  <script defer src="/_vercel/speed-insights/script.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
 </html>
