--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
           <img src="/Image/logo.png" alt="Company Logo" />
         </a>
       </div>
-      <div class="hamburger" onclick="toggleMenu()">☰</div>
+      <div class="hamburger" onclick="toggleMenu()">
+        <svg width="30" height="30" viewBox="0 0 100 80" fill="currentColor">
+          <rect width="100" height="15"></rect>
+          <rect y="30" width="100" height="15"></rect>
+          <rect y="60" width="100" height="15"></rect>
+        </svg>
+      </div>
       <ul class="nav-links" id="navLinks">
         <li><a href="/AboutUs/about.html">About</a></li>
         <li><a href="/Gallery/gallery.html">Gallery</a></li>
@@ -350,7 +356,11 @@
         (window.vaq = window.vaq || []).push(arguments);
       };
 
-      window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+    window.si =
+      window.si ||
+      function () {
+        (window.siq = window.siq || []).push(arguments);
+      };
   </script>
   <script defer src="/_vercel/speed-insights/script.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
