Donate icon added

--- a/Donate/donate.html
+++ b/Donate/donate.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us - Heart-Mind Consultancy</title>
-    <link rel="stylesheet" href="about.css" />
+    <title>Donate - HeartMind Consultancy</title>
+    <link rel="stylesheet" href="donate.css" />
     <link rel="stylesheet" href="../styles.css" />
     <link rel="icon" href="../Image/Logo Ico.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="../Image/Logo Ico.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../Image/Logo Ico.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <!-- Loader -->
@@ -23,7 +27,7 @@
           <img src="../Image/logo.png" alt="Company Logo" />
         </a>
       </div>
-      <div class="hamburger" onclick="toggleMenu()">☰
+      <div class="hamburger" onclick="toggleMenu()">☰</div>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="#footer">Contact</a></li>
@@ -32,144 +36,20 @@
       </ul>
     </nav>
 
-    <section class="company-info">
-      <br>
-      <br>
-      <h1>Heart-Mind Consultancy Private Limited</h1>
-      <p><strong>Register Number:</strong> 330993/080/081</p>
-      <p><strong>PAN Number:</strong> 619884828</p>
-      <p>
-        <strong>Location:</strong> Pokhara Metropolitan City-7, Masbar (Near
-        Zero Kilometer)
-      </p>
-      <p><strong>Established:</strong> March 1st, 2024</p>
-    </section>
-
-    <section class="mission-vision">
-      <h2>Vision</h2>
-      <p>Promotion of psychosocial and mental health well-being for all.</p>
-      <h2>Mission</h2>
-      <p>
-        To advance psychosocial and mental health well-being for all individuals
-        through comprehensive promotion and support initiatives.
-      </p>
-      <h2>Goal</h2>
-      <p>
-        To cultivate an environment where psychosocial and mental health are
-        prioritized, ensuring access to resources, education, and support
-        services that empower individuals to thrive emotionally and
-        psychologically.
-      </p>
-    </section>
-
-    <section class="strengths">
-      <h2>Strengths</h2>
-      <ul>
-        <li>
-          Specialized expertise in mental health, personal development, and
-          organizational consulting.
-        </li>
-        <li>
-          Strong reputation and trust within Pokhara for high-quality services.
-        </li>
-        <li>
-          Client-centric approach with a focus on understanding and meeting
-          client needs.
-        </li>
-        <li>Innovative and effective solutions to clients' challenges.</li>
-        <li>
-          Collaborative partnerships with other organizations and professionals
-          in Pokhara.
-        </li>
-      </ul>
-    </section>
-
-    <section class="key-features">
-      <h2>Key Features</h2>
-      <h3>What We Do and For Whom</h3>
-      <ul>
-        <li>
-          Provide psychological counseling services for individuals with various
-          psychosocial and mental health concerns.
-        </li>
-        <li>
-          Lead and facilitate both long-term and short-term capacity-building
-          training in psychosocial and mental health areas.
-        </li>
-        <li>
-          Conduct research in the fields of psychosocial and mental health.
-        </li>
-        <li>
-          Support mental health treatment and improve understanding of mental
-          health and psychosocial aspects.
-        </li>
-      </ul>
-      <h3>For Whom?</h3>
-      <p>
-        We work with individuals experiencing psychosocial and mental health
-        challenges, their families, college students, and community key figures.
-      </p>
-    </section>
-
-    <section class="aboutServices">
-      <h2>Our Major Services</h2>
-      <ul>
-        <li>Individual/family counseling (home-based care if needed)</li>
-        <li>Mental health treatment and referral for rehabilitation care</li>
-        <li>
-          780-hour training course on psychosocial counseling (approved by the
-          National Health Training Centre - NHTC)
-        </li>
-        <li>
-          Short training sessions on stress management, anger management,
-          self-care, parenting, and motivation.
-        </li>
-        <li>Scientific research and studies.</li>
-      </ul>
-    </section>
-
-    <section class="marketing-strategies">
-      <h2>Marketing Strategies</h2>
-      <ul>
-        <li>Offer free resources or trial sessions.</li>
-        <li>Discounted packages (e.g., pay for 3 sessions, get 1 free).</li>
-        <li>
-          Social media engagement, client testimonials, and service updates on
-          popular platforms.
-        </li>
-        <li>
-          High-quality content marketing through articles, videos, and
-          infographics.
-        </li>
-        <li>Live demonstrations and webinars.</li>
-        <li>Presence on Facebook, YouTube, and email marketing.</li>
-        <li>Partnerships with other organizations.</li>
-        <li>Discounted services for clients unable to pay full fees.</li>
-      </ul>
-    </section>
-
-    <section class="values-culture">
-      <h2>Values and Culture</h2>
-      <ul>
-        <li>
-          Core values: Honesty, respect, accountability, integrity, teamwork,
-          and innovation.
-        </li>
-        <li>
-          Commitment to high-quality, accessible services in a safe, respectful
-          environment.
-        </li>
-        <li>
-          Zero tolerance for sexual abuse, violence, abuse, or harassment.
-        </li>
-        <li>Collaborative approach with other businesses and agencies.</li>
-        <li>Encouragement of innovation and open communication among staff.</li>
-        <li>
-          Regularly review financial plans and risk management strategies.
-        </li>
-        <li>Customer satisfaction surveys to improve services.</li>
-      </ul>
-    </section>
+    <div class="donation-container">
+      <h1 class="donate-title">Donate us directly to our bank account:</h1>
+      <div class="qr-container">
+        <img
+          src="../Image/donate.jpg"
+          alt="QR Code for Donation"
+          class="qr-image"
+        />
+      </div>
+      <h2 class="other-methods-title">Other methods of help:</h2>
+      <div class="other-methods">
+        <!-- Additional content can be added here later -->
+      </div>
+    </div>
 
     <!-- Footer -->
     <footer id="footer">
@@ -312,7 +192,6 @@
         <p>&copy; 2023 Heart Mind Consultancy Pvt. Ltd. All rights reserved.</p>
       </div>
     </footer>
-
-    <script src="../scripts.js"></script>
+    <!-- <script src="donate.js"></script> -->
   </body>
 </html>
