--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
           <img src="/Image/logo.png" alt="Company Logo" />
         </a>
       </div>
+      <a href="/Donate/donate.html">
+        <button class="donateus">
+          Donate us
+          <svg
+            height="30"
+            width="30"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M0 0H24V24H0z" fill="none"></path>
+            <path
+              d="M16.5 3C19.538 3 22 5.5 22 9c0 7-7.5 11-10 12.5C9.5 20 2 16 2 9c0-3.5 2.5-6 5.5-6C9.36 3 11 4 12 5c1-1 2.64-2 4.5-2z"
+            ></path>
+          </svg>
+        </button>
+      </a>
       <div class="hamburger" onclick="toggleMenu()">
         <svg width="30" height="30" viewBox="0 0 100 80" fill="currentColor">
           <rect width="100" height="15"></rect>
