--- a/AboutUs/about.html
+++ b/AboutUs/about.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - Heart-Mind Consultancy</title>
-    <link rel="stylesheet" href="about.css" />
     <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="../subpage.css" />
     <link rel="icon" href="../Image/Logo Ico.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="../Image/Logo Ico.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../Image/Logo Ico.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <!-- Loader -->
@@ -23,18 +28,59 @@
           <img src="../Image/logo.png" alt="Company Logo" />
         </a>
       </div>
-      <div class="hamburger" onclick="toggleMenu()">☰
-      <ul class="nav-links">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="#footer">Contact</a></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <a href="/Donate/donate.html">
+        <button class="donateus">
+          Donate us
+          <svg
+            height="30"
+            width="30"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M0 0H24V24H0z" fill="none"></path>
+            <path
+              d="M16.5 3C19.538 3 22 5.5 22 9c0 7-7.5 11-10 12.5C9.5 20 2 16 2 9c0-3.5 2.5-6 5.5-6C9.36 3 11 4 12 5c1-1 2.64-2 4.5-2z"
+            ></path>
+          </svg>
+        </button>
+      </a>
+      <a href="../index.html">
+        <button class="backtohome">
+          <span class="button__icon-wrapper">
+            <svg
+              viewBox="0 0 14 15"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="button__icon-svg"
+              width="10"
+            >
+              <path
+                d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
+                fill="currentColor"
+              ></path>
+            </svg>
+
+            <svg
+              viewBox="0 0 14 15"
+              fill="none"
+              width="10"
+              xmlns="http://www.w3.org/2000/svg"
+              class="button__icon-svg button__icon-svg--copy"
+            >
+              <path
+                d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
+                fill="currentColor"
+              ></path>
+            </svg>
+          </span>
+          Back to home
+        </button>
+      </a>
     </nav>
 
     <section class="company-info">
-      <br>
-      <br>
+      <br />
+      <br />
       <h1>Heart-Mind Consultancy Private Limited</h1>
       <p><strong>Register Number:</strong> 330993/080/081</p>
       <p><strong>PAN Number:</strong> 619884828</p>
