--- a/Donate/donate.html
+++ b/Donate/donate.html
@@ -71,9 +71,13 @@
           class="qr-image"
         />
       </div>
-      <!-- <h2 class="other-methods-title">Other methods of help:</h2>
+      <!-- <h2 class="other-methods-title">Other methods of help:</h2> -->
       <div class="other-methods">
-         Additional content can be added here later -->
+        With a donation of 20-25 thousand NPR annually, Heart-Mind Consultancy
+        can set up a toll-free service, enabling more people to access essential
+        mental health support without financial or logistical barriers. This
+        toll-free service will make it easier for individuals in need to reach
+        out for help, enhancing accessibility and potentially saving lives.
       </div>
     </div>
 
