Our Team Update

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
         </svg>
       </div>
       <ul class="nav-links" id="navLinks">
-        <li><a href="/AboutUs/about.html">About</a></li>
-        <li><a href="/Gallery/gallery.html">Gallery</a></li>
+        <li><a href="./AboutUs/about.html">About</a></li>
+        <li><a href="./Our_Team/team.html">Our Team</a></li>
+        <li><a href="./Gallery/gallery.html">Gallery</a></li>
         <li><a href="#services">Our Services</a></li>
         <li><a href="#impact-stories">Impact Stories</a></li>
         <li><a href="#footer">Contact</a></li>
