--- a/Our_Team/team.html
+++ b/Our_Team/team.html
@@ -153,7 +153,7 @@
         </div>
         <div class="team-details">
           <h1>Arpan Adhikari</h1>
-          <h3>Technical Assistant</h3>
+          <h3>Website Developer</h3>
           <p>Computer Engineering Student, Graduate</p>
           <p>
             Contact: <a href="https://www.arpanadhikari7.com.np/">Website</a>
