--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -140,6 +140,21 @@
         <div class="gallery-item">
           <img src="../Image/Gallery/19.jpeg" alt="Image 19" />
         </div>
+        <div class="gallery-item">
+          <img src="../Image/Gallery/20.jpg" alt="Image 20" />
+        </div>
+        <div class="gallery-item">
+          <img src="../Image/Gallery/21.jpg" alt="Image 21" />
+        </div>
+        <div class="gallery-item">
+          <img src="../Image/Gallery/22.jpg" alt="Image 22" />
+        </div>
+        <div class="gallery-item">
+          <img src="../Image/Gallery/23.jpg" alt="Image 23" />
+        </div>
+        <div class="gallery-item">
+          <img src="../Image/Gallery/24.jpg" alt="Image 24" />
+        </div>
       </div>
     </div>
 
