--- a/AboutUs/about.html
+++ b/AboutUs/about.html
@@ -78,7 +78,7 @@
       </a>
     </nav>
 
-    <section class="company-info">
+    <section class="company-info"> 
       <br />
       <br />
       <h1>Heart-Mind Consultancy Private Limited</h1>
@@ -89,6 +89,9 @@
         Zero Kilometer)
       </p>
       <p><strong>Established:</strong> March 1st, 2024</p>
+      <a href="./Annual_Report.pdf" target="_blank" class="btn-annual-report">
+        View Annual Report
+      </a>
     </section>
 
     <section class="mission-vision">
