--- a/AboutUs/about.html
+++ b/AboutUs/about.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - Heart-Mind Consultancy</title>
-    <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="about.css" />
-    <link rel="stylesheet" href="../subpage.css" />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/AboutUs/about.css" />
+    <link rel="stylesheet" href="/subpage.css" />
+
     <link rel="icon" href="../Image/Logo Ico.ico" type="image/x-icon" />
     <link
       rel="shortcut icon"
@@ -78,7 +79,7 @@
       </a>
     </nav>
 
-    <section class="company-info"> 
+    <section class="company-info">
       <br />
       <br />
       <h1>Heart-Mind Consultancy Private Limited</h1>
