--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       </div>
       <ul class="nav-links" id="navLinks">
         <li><a href="./AboutUs/about.html">About</a></li>
+        <li><a href="./News/news.html">News Updates</a></li>
         <li><a href="./Our_Team/team.html">Our Team</a></li>
         <li><a href="./Gallery/gallery.html">Gallery</a></li>
         <li><a href="#services">Our Services</a></li>
